--- a/Akanonda/Akanonda.Server/Akanonda.Server.csproj
+++ b/Akanonda/Akanonda.Server/Akanonda.Server.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,11 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Akanonda.GameLibrary\Akanonda.GameLibrary.csproj">
-      <Project>{0994FF4F-42A0-4544-B051-BF644044B2A1}</Project>
+      <Project>{0994ff4f-42a0-4544-b051-bf644044b2a1}</Project>
       <Name>Akanonda.GameLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lidgren.Network\Lidgren.Network.csproj">
-      <Project>{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}</Project>
+      <Project>{49ba1c69-6104-41ac-a5d8-b54fa9f696e8}</Project>
       <Name>Lidgren.Network</Name>
     </ProjectReference>
   </ItemGroup>
