--- a/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
+++ b/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collision.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
