--- a/Akanonda/Akanonda.Server/app.config
+++ b/Akanonda/Akanonda.Server/app.config
@@ -1,20 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Akanonda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-    </startup>
     <applicationSettings>
         <Akanonda.Properties.Settings>
-            <setting name="RemoteServer" serializeAs="String">
-                <value>127.0.0.1</value>
-            </setting>
-            <setting name="RemotePort" serializeAs="String">
+            <setting name="LocalPort" serializeAs="String">
                 <value>1337</value>
+            </setting>
+            <setting name="MaxConnections" serializeAs="String">
+                <value>100</value>
             </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
