trying to fix zombie

--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Akanonda.Properties.Settings>
             <setting name="RemoteServer" serializeAs="String">
-                <value>127.0.0.1</value>
+                <value>server.xios.at</value>
             </setting>
             <setting name="RemotePort" serializeAs="String">
                 <value>1337</value>
