--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Akanonda.Properties.Settings>
             <setting name="RemoteServer" serializeAs="String">
-                <value>127.0.0.1</value>
+                <value>server.xios.at</value>
             </setting>
             <setting name="RemotePort" serializeAs="String">
                 <value>1337</value>
