--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -10,11 +10,17 @@
     </startup>
     <applicationSettings>
         <Akanonda.Properties.Settings>
-            <setting name="RemoteServer" serializeAs="String">
+            <setting name="GameServer" serializeAs="String">
                 <value>127.0.0.1</value>
             </setting>
-            <setting name="RemotePort" serializeAs="String">
+            <setting name="GamePort" serializeAs="String">
                 <value>1337</value>
+            </setting>
+            <setting name="ChatServer" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="ChatPort" serializeAs="String">
+                <value>1338</value>
             </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
