--- a/Akanonda/Akanonda.Server/Properties/Settings.settings
+++ b/Akanonda/Akanonda.Server/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="MaxConnections" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="GameSpeed" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
