--- a/Akanonda/Akanonda.Server/app.config
+++ b/Akanonda/Akanonda.Server/app.config
@@ -13,6 +13,9 @@
             <setting name="MaxConnections" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="GameSpeed" serializeAs="String">
+                <value>50</value>
+            </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
 </configuration>
