--- a/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
+++ b/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="PlayerStatus.cs" />
     <Compile Include="PlayerSteering.cs" />
-    <Compile Include="PowerUps.cs" />
+    <Compile Include="PowerUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeHelper.cs" />
   </ItemGroup>
