--- a/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
+++ b/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
@@ -49,11 +49,9 @@
     <Compile Include="PlayerStatus.cs" />
     <Compile Include="PlayerSteering.cs" />
     <Compile Include="PowerUp.cs" />
+    <Compile Include="PowerUpModifiactors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeHelper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="goFast.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
