--- a/Akanonda/Akanonda.Client/Akanonda.Client.csproj
+++ b/Akanonda/Akanonda.Client/Akanonda.Client.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <EmbeddedResource Include="LobbyForm.resx">
       <DependentUpon>LobbyForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
