--- a/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
+++ b/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
@@ -49,7 +49,7 @@
     <Compile Include="PlayerStatus.cs" />
     <Compile Include="PlayerSteering.cs" />
     <Compile Include="PowerUp.cs" />
-    <Compile Include="PowerUpModifiactors.cs" />
+    <Compile Include="PowerUpModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeHelper.cs" />
   </ItemGroup>
