--- a/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
+++ b/Akanonda/Akanonda.GameLibrary/Akanonda.GameLibrary.csproj
@@ -65,52 +65,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\biggerwallsico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\bigico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\blackappleico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\closingwallsico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\getmoreico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gofastico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\goldenappleico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\goslowico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gothroughwallsico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\morepowerupsico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\movepowerupsico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\othersgofastico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\othersgoslowico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redappleico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\shorterico.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\openwallsico.ico" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
