smaller images, moving working und meine ip

--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -10,14 +10,11 @@
     </startup>
     <applicationSettings>
         <Akanonda.Properties.Settings>
-            <setting name="GameServer" serializeAs="String">
-                <value>127.0.0.1</value>
+            <setting name="ServerAdresse" serializeAs="String">
+                <value>digl.dyndns.info</value>
             </setting>
             <setting name="GamePort" serializeAs="String">
                 <value>1337</value>
-            </setting>
-            <setting name="ChatServer" serializeAs="String">
-                <value>127.0.0.1</value>
             </setting>
             <setting name="ChatPort" serializeAs="String">
                 <value>1338</value>
