--- a/Akanonda/Akanonda.Client/Properties/Settings.settings
+++ b/Akanonda/Akanonda.Client/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ServerAdresse" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">digl.dyndns.info</Value>
+      <Value Profile="(Default)">127.0.0.1</Value>
     </Setting>
     <Setting Name="GamePort" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1337</Value>
