--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Akanonda.Properties.Settings>
             <setting name="ServerAdresse" serializeAs="String">
-                <value>digl.dyndns.info</value>
+                <value>127.0.0.1</value>
             </setting>
             <setting name="GamePort" serializeAs="String">
                 <value>1337</value>
