admin tools for in Game use

--- a/Akanonda/Akanonda.Server/Properties/Settings.settings
+++ b/Akanonda/Akanonda.Server/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Akanonda.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="LocalPort" Type="System.Int32" Scope="Application">
+    <Setting Name="GamePort" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1337</Value>
     </Setting>
     <Setting Name="MaxConnections" Type="System.Int32" Scope="Application">
@@ -10,6 +10,9 @@
     </Setting>
     <Setting Name="GameSpeed" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">50</Value>
+    </Setting>
+    <Setting Name="ChatPort" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1338</Value>
     </Setting>
   </Settings>
 </SettingsFile>
