--- a/Akanonda/Akanonda.Server/app.config
+++ b/Akanonda/Akanonda.Server/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <applicationSettings>
         <Akanonda.Properties.Settings>
-            <setting name="LocalPort" serializeAs="String">
+            <setting name="GamePort" serializeAs="String">
                 <value>1337</value>
             </setting>
             <setting name="MaxConnections" serializeAs="String">
@@ -15,6 +15,9 @@
             </setting>
             <setting name="GameSpeed" serializeAs="String">
                 <value>50</value>
+            </setting>
+            <setting name="ChatPort" serializeAs="String">
+                <value>1338</value>
             </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
