--- a/Akanonda/Akanonda.Server/app.config
+++ b/Akanonda/Akanonda.Server/app.config
@@ -19,6 +19,9 @@
             <setting name="ChatPort" serializeAs="String">
                 <value>1338</value>
             </setting>
+            <setting name="Use4Buttons" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
 </configuration>
