--- a/Akanonda/Akanonda.Client/app.config
+++ b/Akanonda/Akanonda.Client/app.config
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Akanonda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Akanonda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
     </startup>
-    <applicationSettings>
+    <userSettings>
         <Akanonda.Properties.Settings>
             <setting name="ServerAdresse" serializeAs="String">
                 <value>127.0.0.1</value>
@@ -23,5 +23,5 @@
                 <value>False</value>
             </setting>
         </Akanonda.Properties.Settings>
-    </applicationSettings>
+    </userSettings>
 </configuration>
