--- a/Akanonda/Akanonda.Server/app.config
+++ b/Akanonda/Akanonda.Server/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Akanonda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Akanonda.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <Akanonda.Properties.Settings>
@@ -13,9 +16,6 @@
             <setting name="MaxConnections" serializeAs="String">
                 <value>100</value>
             </setting>
-            <setting name="GameSpeed" serializeAs="String">
-                <value>50</value>
-            </setting>
             <setting name="ChatPort" serializeAs="String">
                 <value>1338</value>
             </setting>
@@ -24,4 +24,11 @@
             </setting>
         </Akanonda.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <Akanonda.Properties.Settings>
+            <setting name="GameSpeed" serializeAs="String">
+                <value>50</value>
+            </setting>
+        </Akanonda.Properties.Settings>
+    </userSettings>
 </configuration>
